# radio-g

./: .coverage  .dockerignore  .env.example  .env.prod.example  .gitignore  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_UNIFIED.md  DEPLOYMENT_WORKFLOW.md  Dockerfile.api  Dockerfile.fetcher  Dockerfile.processor  Dockerfile.seed  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SETUP.md  START_HERE.md  TESTING.md  arch.mmd  coverage.xml  docker-compose.yml  main.py  news_pipeline.py  processing_consumer.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  technical_arch.excalidraw  test_fetcher.py  test_google_login_ai.py  test_kafka_pipeline.py  test_processing.py  test_translation.py  test_voice.py
config/: config.py  gcs_lifecycle.json  logging_config.py  sources.yaml
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AudioPlayer.tsx  LanguageSelector.tsx  PlaylistView.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
models/: dlq_event.py  news_item.py
scripts/: build_and_run_local.sh  create_env.sh  deploy.sh  deploy_to_gcp.sh  replay_dlq.py  seed_languages.py  setup.sh  test_deployment.sh  test_redis_conn.py
services/: content_scraper.py  deduplicator.py  kafka_consumer.py  kafka_producer.py  language_manager.py  news_fetcher.py  storage_service.py  translation_service.py  tts_service.py
tests/: conftest.py  test_fetcher.py  test_kafka_pipeline.py  test_models.py  test_processing.py  test_replay_dlq.py  test_translation_tts.py
utils/: health.py
