[project]
name = "radio-g"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "confluent-kafka>=2.12.2",
    "feedparser>=6.0.12",
    "lxml[html-clean]>=6.0.2",
    "newspaper3k>=0.2.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
]
